2010-04-28  Chong Yidong  <cyd@stupidchicken.com>

	* bindings.el (complete-symbol): Move into minibuffer.el.

	* minibuffer.el (complete-tag): Move from etags.el.  If tags
	completion cannot be performed, return nil instead of signalling
	an error.
	(completion-at-point): Make it an alias for complete-symbol.
	(complete-symbol): Move from bindings.el, and replace with the
	body of completion-at-point.

	* progmodes/etags.el (complete-tag): Move to minibuffer.el.

	* cedet/semantic.el (semantic-mode): When enabled, add
	semantic-ia-complete-symbol to completion-at-point-functions.

	* cedet/semantic/ia.el (semantic-ia-complete-symbol): Return nil
	if Semantic is not active.

2010-04-28  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-remote-selinux-p): New defun.
	(tramp-handle-file-selinux-context)
	(tramp-handle-set-file-selinux-context): Use it.

2010-04-28  Sam Steingold  <sds@gnu.org>

	* progmodes/bug-reference.el (bug-reference-url-format): Mark as
	`safe-local-variable' if the value is a string or a symbol with
	the property `bug-reference-url-format'.

2010-04-28  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/bug-reference.el (bug-reference-url-format): Revert
	2010-04-27 change due to security risk.

2010-04-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	Make it possible to locally disable a globally enabled mode.
	* simple.el (fundamental-mode): Run fundamental-mode-hook.
	* emacs-lisp/derived.el (define-derived-mode): Use fundamental-mode
	rather than kill-all-local-variables so it runs fundamental-mode-hook.
	* emacs-lisp/easy-mmode.el (define-globalized-minor-mode):
	Use fundamental-mode-hook to run MODE-enable-in-buffers earlier, so
	that subsequent hooks get a chance to disable it.

2010-04-27  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/easy-mmode.el (define-globalized-minor-mode):
	Avoid re-enabling a minor mode after the user turned the minor mode